# copyright_maintenance

./: .coveragerc  .pylintrc  .pytest.ini  CHANGELOG.md  CONTIBUTING.md  Doxyfile  LICENSE  README.md  clean-build.sh  clean-temp.sh  mkdoc.sh  package.sh  pyproject.toml  requirements.txt  unittest.sh
.github/workflows/: checkin.yml  pylint.yml
doc/html/: annotated.html  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentBlock-members.html  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentBlock.html  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentBlock__coll__graph.map  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentBlock__coll__graph.md5  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentBlock__inherit__graph.map  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentBlock__inherit__graph.md5  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentParams-members.html  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentParams.html  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentParams__coll__graph.map  classcopyright__maintenance__grocsoftware_1_1comment__block_1_1CommentParams__coll__graph.md5  (+110 more)
src/copyright_maintenance_grocsoftware/: __init__.py  (+7 more)
tests/: __init__.py  dir_init.py  dir_init.py.in  test_comment_block.py  test_copyright_order.py  test_copyright_parse.py  test_copyright_parse_base.py  test_copyright_years_list.py  test_file_dates.py  test_oscmdshell.py  test_update_copyright.py
(+54 files in other folders)
